# aern

./: .gitignore  .hgtags  .project-settings.yml  FnView.glade  LICENCE  LICENSE  Main.hs  README.md  aern-pages.cabal  index.html  install-all.sh  install-nogtk.sh  install-nompfr.sh  overview.ods  overview.txt
AERN-Basics/: AERN-Basics.cabal  CHANGES
AERN-Basics/doc/: AERN-Basics.haddock  Numeric-AERN-Basics-CInterval-NumericOrder.html  Numeric-AERN-Basics-CInterval-RefinementOrder.html  Numeric-AERN-Basics-CInterval.html  Numeric-AERN-Basics-Effort.html  Numeric-AERN-Basics-Equality.html  Numeric-AERN-Basics-Granularity.html  Numeric-AERN-Basics-Interval-NumericOrder.html  Numeric-AERN-Basics-Interval-RefinementOrder.html  Numeric-AERN-Basics-Interval.html  Numeric-AERN-Basics-Laws-Operation.html  Numeric-AERN-Basics-Laws-OperationRelation.html  Numeric-AERN-Basics-Laws-Relation.html  Numeric-AERN-Basics-Laws-RoundedOperation.html  Numeric-AERN-Basics-Laws-SemidecidableRelation.html  Numeric-AERN-Basics-MaybeBool.html  Numeric-AERN-Basics-Mutable.html  Numeric-AERN-Basics-NumericOrder-Extrema.html  Numeric-AERN-Basics-NumericOrder-Lattice.html  Numeric-AERN-Basics-NumericOrder-Poset.html  Numeric-AERN-Basics-NumericOrder-RoundedLattice.html  Numeric-AERN-Basics-NumericOrder-SemidecidablePoset.html  Numeric-AERN-Basics-NumericOrder.html  Numeric-AERN-Basics-PartialOrdering.html  Numeric-AERN-Basics-RefinementOrder-Basis.html  Numeric-AERN-Basics-RefinementOrder-Extrema.html  Numeric-AERN-Basics-RefinementOrder-Lattice.html  Numeric-AERN-Basics-RefinementOrder-Poset.html  Numeric-AERN-Basics-RefinementOrder-RoundedBasis.html  Numeric-AERN-Basics-RefinementOrder-RoundedLattice.html  Numeric-AERN-Basics-RefinementOrder-SemidecidablePoset.html  Numeric-AERN-Basics-RefinementOrder.html  doc-index-124.html  doc-index-38.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-A.html  doc-index-B.html  doc-index-C.html  (+49 more)
AERN-Basics/src/Numeric/AERN/: NumericOrder.hs  RefinementOrder.hs
AERN-Basics/src/Numeric/AERN/Basics/: ApproxEnclosure.hs  ApproxOrder.hs  BasicTypes.hs  Bench.hs  CInterval.hs  Consistency.hs  Effort.hs  Enclosure.hs  Equality.hs  Exception.hs  Extrema.hs  (+11 more)
AERN-Basics/tools/: BenchCsvToGnuplot.hs
AERN-Picard/: AERN-Picard.cabal
AERN-Picard/demos/: demoPicardView.hs  ivpPendulum.hs  ivpSpringMass.hs
AERN-Real/: AERN-Real.cabal  CHANGES
AERN-Real-Double/: AERN-Real-Double.cabal  CHANGES
AERN-Real-Double/bench/: Main.hs
AERN-Real-Double/demos/: Minimal.hs  Quadratic.hs  Riemann.hs  Zero.hs
AERN-Real-Double/tests/: Main.hs
AERN-Real-Interval/: AERN-Real-Interval.cabal  CHANGES
AERN-Real-MPFR/: AERN-Real-MPFR.cabal
AERN-Real-MPFR/demos/: Minimal.hs  Pendulum.hs  SpringMass.hs  SpringMassV.hs
AERN-Real-MPFR/tests/: Main.hs
AERN-Real/tests/: Main.hs
AERN-RmToRn/: AERN-RmToRn.cabal  FnView.glade
AERN-RmToRn-IntPoly/: AERN-RmToRn-IntPoly.cabal  FnView.glade  maxZeroHalf.fkt  minmaxUpDn.fkt
AERN-RmToRn-IntPoly/demos/: ivpBouncingBall.hs  ivpPendulum.hs  ivpSpringMass.hs  minimal.hs  plot.hs
AERN-RmToRn-IntPoly/tests/: Main.hs
AERN-RmToRn-Poly/: AERN-RmToRn-Poly.cabal  Makefile  Setup.hs  polynomial-notes.txt
AERN-RmToRn-Poly/cbits/: EvalExport_stub.h  README  basics.h  haskell_fn_types.h  poly.c  poly.h  tree234.c  tree234.h
AERN-RmToRn-Poly/cbits/DoubleCoeff/: addition.c  bounds.c  coeff.h  evaluation.c  multiplication.c  poly.c  poly.h  scalar.c
AERN-RmToRn-Poly/cbits/GenericCoeff/: addition.c  bounds.c  coeff.h  evaluation.c  multiplication.c  poly.c  poly.h  reduce.c  scalar.c
AERN-RmToRn-Poly/tests/: AdHocEndpointTests.hs  AdHocPolyTests.hs  Main.hs  Main2.hs
aern-fnreps/: aern-fnreps.cabal
aern-fnreps/src/FnReps/: FunctionAbstraction.hs  Polynomial.hs
aern-fnreps/src/FnReps/Polynomial/: UnaryChebSparse.hs
aern-interval/: aern-interval.cabal
aern-intpoly/: aern-intpoly.cabal
aern-intpoly/demos/: minimal.hs
aern-intpoly/tests/: Main.hs
aern-ivp/: .gitignore  aern-ivp.cabal  shrinkwrap-doughnutsegm.fkt  springMass-uv-ut-speed.fkt
aern-ivp/demos/: Enclosing_Zeno_plots-NAHS2015.txt  demoPicardView.hs  ivpPendulum.hs  simple-events-bisect.hs  simple-events-locate-polyint.hs  simple-events-locate.hs  simple-events.hs  simple-ode-polyint.hs  simple-ode.hs  simple-uv-et-polyint.hs  simple-uv-et.hs  simple-uv-ut.hs  simple.hs  simpleVT.hs  simpleVt.hs
aern-mpfr/: aern-mpfr.cabal
aern-mpfr-rounded/: aern-mpfr-rounded.cabal
aern-mpfr-rounded/demos/: LogisticMap.hs  Minimal.hs  SpringMassV.hs
aern-mpfr-rounded/tests/: Main.hs
aern-mpfr/demos/: IntermediateValue.hs  Logistic.hs  LogisticMap.hs  Minimal.hs  SpringMass.hs
aern-mpfr/tests/: Main.hs
aern-order/: aern-order.cabal
aern-order/src/Numeric/AERN/: NumericOrder.hs  RefinementOrder.hs
aern-order/tools/: BenchCsvToGnuplot.hs
aern-picard/: PicardView.glade  aern-picard.cabal
aern-picard/demos/: demoPicardView.hs  ivpBouncingBall.hs  simple.hs
aern-poly/: aern-poly.cabal
aern-poly-plot-gtk/: .gitignore  LICENCE  aern-poly-plot-gtk.cabal
aern-poly-plot-gtk/benchmarks/MoreDigits2006/: P01.hs  P06.hs
aern-poly-plot-gtk/demos/: Inclusion.hs  Integrate.hs  LogisticMap.hs  Quickstart.hs  Quickstart1.hs  TestSineCosine.hs  erf.hs  plot.hs  plotPicard.hs  quickstart.hs  testRecip.hs  testSineCosine.hs  thickprod.hs
aern-poly/demos/: minimal.hs  victormagron.hs
aern-poly/old/Polynomial/: IntPoly.hs
aern-poly/old/Polynomial/IntPoly/: Addition.hs  Config.hs  DomBoxChanges.hs  New.hs  Reduction.hs  RingOps.hs  Substitution.hs
aern-poly/tests/: Main.hs
aern-real/: aern-real.cabal
aern-real/concepts/: BinaryOpsSimplified.hs
aern-realfn/: aern-realfn.cabal
aern-realfn-plot-gtk/: FnView.glade  aern-realfn-plot-gtk.cabal
aern-realfn/src/Numeric/AERN/: RmToRn.hs
aern-temp/: FnView.glade  aern-temp.cabal
aern-temp/benchmarks/FnRepComparison/: FunctionAbstraction.hs  PolynomialApproximation.hs  runFnRepComparison.hs
aern-temp/benchmarks/MoreDigits2006/: P01-IRRAMStyle-rounded.hs  P01-IRRAMStyle.hs  P01-SimpleExactReal.hs
(+573 files in other folders)
