name:                aern-pages
version:             0.1.0.1
license:             MIT
license-file:        LICENCE
license-file:        LICENCE.hakyll-bootstrap
category:            Web
author:              Michal Konecny (based on code by Stephen Diehl)
maintainer:          mikkonecny@gmail.com
build-type:          Simple
cabal-version:       >=1.16

executable aern-pages
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:
      base       >= 4.6 && <4.7
    , containers >= 0.5 && <0.6
    , pandoc     >= 1.11
    , hakyll     >= 4.3
