Name:           AERN-Basics
Version:        2010.1
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny (Aston University)
Copyright:      (c) 2010 Michal Konecny
Maintainer:     mikkonecny@gmail.com
Homepage:       http://code.google.com/p/aern/
Stability:      experimental
Category:       Data, Math
Synopsis:       foundational type classes for approximating exact real numbers
Tested-with:    GHC ==6.12.1
Description:
    Type-classes abstracting various kinds of approximations for exact entities:
    
    * those that are *near* to the exact value due to limited granularity 
      (eg floating point numbers with fixed granularity (aka precision) 
       approximating real numbers or bounded-degree polynomials with floating point coefficients
       approximating continuous functions)
    
    * those that somehow *enclose* the exact entity, usually using a pair of "endpoints" 

    Type classes are provided to capture:
    
    * the partial, sometimes semidecidable, natural ordering (<)
    
    * the partial, sometimes semidecidable, enclosure ordering (⊂)
    

Extra-Source-Files:
    ChangeLog

Library
  hs-source-dirs: src
  Build-Depends:
        base >= 4, base < 5, QuickCheck > 2, QuickCheck <= 3,
        numeric-prelude
  Exposed-modules:
    Numeric.AERN.Basics.MaybeBool
    Numeric.AERN.Basics.Effort
    Numeric.AERN.Basics.Mutable
    Numeric.AERN.Basics.Equality
    Numeric.AERN.Basics.PartialOrdering
    Numeric.AERN.Basics.Extrema
    Numeric.AERN.Basics.NumericOrder
    Numeric.AERN.Basics.NumericOrder.Poset
    Numeric.AERN.Basics.NumericOrder.Lattice
    Numeric.AERN.Basics.NumericOrder.SemidecidablePoset
    Numeric.AERN.Basics.NumericOrder.RoundedLattice
    Numeric.AERN.Basics.Enclosure
    Numeric.AERN.Basics.ApproxEnclosure
    Numeric.AERN.Basics.Granularity
    Numeric.AERN.Basics.Interval
    Numeric.AERN.Basics.Laws.Relation
    Numeric.AERN.Basics.Laws.SemidecidableRelation
    Numeric.AERN.Basics.Laws.Operation
    Numeric.AERN.Basics.Laws.RoundedOperation
    Numeric.AERN.Basics.Laws.OperationRelation
    