Name:           AERN-Basics
Version:        2010.1
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny (Aston University)
Copyright:      (c) 2010 Michal Konecny
Maintainer:     mikkonecny@gmail.com
Homepage:       http://code.google.com/p/aern/
Stability:      experimental
Category:       Data, Math
Synopsis:       foundational type classes for approximating exact real numbers
Tested-with:    GHC ==6.12.1
Description:
 Type-classes abstracting various kinds of approximations for exact entities:
 .   
    * those that are /near/ to the exact value due to limited granularity 
      (eg floating point numbers with fixed granularity (aka precision) 
       approximating real numbers or bounded-degree polynomials with floating point coefficients
       approximating continuous functions)
 .   
    * those that somehow /enclose/ the exact entity, usually using a pair of /endpoints/ 
 .
 Type classes are provided to capture:
 .   
    * the partial, sometimes semidecidable, natural ordering (<=) used in relation to /nearness/
 .   
    * the partial, sometimes semidecidable, refinement ordering (&#8849;) used in relation to /enclosure/
 .   

Extra-Source-Files:
    CHANGES

Library
  hs-source-dirs: src
  ghc-options:     -O2
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.4,
        QuickCheck >= 2.1 && < 2.2,
        test-framework >= 0.2 && < 0.3, test-framework-quickcheck2 >= 0.2 && < 0.3
  Exposed-modules:
    Numeric.AERN.Basics.Exception
    Numeric.AERN.Basics.Effort
    Numeric.AERN.Basics.Mutable
    Numeric.AERN.Basics.PartialOrdering
    Numeric.AERN.Basics.NumericOrder
    Numeric.AERN.Basics.RefinementOrder
    Numeric.AERN.Basics.Granularity
    Numeric.AERN.Basics.CInterval
    Numeric.AERN.Basics.CInterval.Equality
    Numeric.AERN.Basics.CInterval.Granularity
    Numeric.AERN.Basics.CInterval.NumericOrder
    Numeric.AERN.Basics.CInterval.RefinementOrder
    Numeric.AERN.Basics.Interval
    Numeric.AERN.Basics.Laws.Utilities
    Numeric.AERN.Basics.Laws.Relation
    Numeric.AERN.Basics.Laws.SemidecidableRelation
    Numeric.AERN.Basics.Laws.Operation
    Numeric.AERN.Basics.Laws.RoundedOperation
    Numeric.AERN.Basics.Laws.OperationRelation
    Numeric.AERN.Misc.Bool
    Numeric.AERN.Misc.Maybe
    Numeric.AERN.Misc.QuickCheck
    
  Other-modules:
    Numeric.AERN.Basics.NumericOrder.Extrema
    Numeric.AERN.Basics.NumericOrder.Poset
    Numeric.AERN.Basics.NumericOrder.Lattice
    Numeric.AERN.Basics.NumericOrder.SemidecidablePoset
    Numeric.AERN.Basics.NumericOrder.RoundedLattice
    Numeric.AERN.Basics.RefinementOrder.Extrema
    Numeric.AERN.Basics.RefinementOrder.Poset
    Numeric.AERN.Basics.RefinementOrder.Basis
    Numeric.AERN.Basics.RefinementOrder.Lattice
    Numeric.AERN.Basics.RefinementOrder.SemidecidablePoset
    Numeric.AERN.Basics.RefinementOrder.RoundedBasis
    Numeric.AERN.Basics.RefinementOrder.RoundedLattice
    Numeric.AERN.Basics.Interval.Basics
    Numeric.AERN.Basics.Interval.NumericOrder
    Numeric.AERN.Basics.Interval.RefinementOrder

    