Name:           AERN-Basics
Version:        2011.2.0.0
Cabal-Version:  >= 1.8
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny (Aston University)
Copyright:      (c) 2011 Michal Konecny, Jan Duracz
Maintainer:     mikkonecny@gmail.com
Homepage:       http://code.google.com/p/aern/
Stability:      experimental
Category:       Data, Math
Synopsis:       foundational type classes for approximating exact real numbers
Tested-with:    GHC ==6.12.3, GHC ==7.2.1
Description:
 Type-classes abstracting various kinds of approximations for exact entities:
 .   
    * those that are /near/ to the exact value due to limited granularity 
      (eg floating point numbers with fixed granularity (aka precision) 
       approximating real numbers or bounded-degree polynomials with floating point coefficients
       approximating continuous functions)
 .   
    * those that somehow /enclose/ the exact entity, usually using a pair of /endpoints/ 
 .
 Type classes are provided to capture:
 .   
    * the partial, sometimes semi-decided, natural ordering (<=) used in relation to /nearness/
 .   
    * the partial, sometimes semi-decided, refinement ordering (&#8849;) used in relation to /enclosure/
 .   
 This package does not compile with ghc 7.0.* due to a 
 compiler bug that has been fixed for the 7.2.1 release.
 Haddock documentation can be found via <http://code.google.com/p/aern/wiki/Main>.

Extra-Source-Files:
    CHANGES

Library
  hs-source-dirs: src
  ghc-options:     -O2
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.5,
        QuickCheck >= 2.1 && < 3,
        criterion >= 0.5 && < 0.6,
        deepseq >= 1.1.0.0 && < 2,
        random >= 1.0 && < 2.0,
        test-framework >= 0.2 && < 1, 
        test-framework-quickcheck2 >= 0.2 && < 1
  Exposed-modules:
    Numeric.AERN.Basics.ShowInternals 
    Numeric.AERN.Basics.Exception 
    Numeric.AERN.Basics.Effort 
    Numeric.AERN.Basics.Mutable 
    Numeric.AERN.Basics.Bench 
    Numeric.AERN.Basics.PartialOrdering 
    Numeric.AERN.Basics.Consistency 
    Numeric.AERN.NumericOrder 
    Numeric.AERN.NumericOrder.OpsImplicitEffort 
    Numeric.AERN.NumericOrder.OpsDefaultEffort 
    Numeric.AERN.NumericOrder.InPlace.OpsImplicitEffort 
    Numeric.AERN.NumericOrder.InPlace.OpsDefaultEffort 
    Numeric.AERN.RefinementOrder 
    Numeric.AERN.RefinementOrder.IntervalLike
    Numeric.AERN.RefinementOrder.OpsImplicitEffort 
    Numeric.AERN.RefinementOrder.OpsDefaultEffort 
    Numeric.AERN.RefinementOrder.InPlace.OpsImplicitEffort 
    Numeric.AERN.RefinementOrder.InPlace.OpsDefaultEffort 
    Numeric.AERN.Basics.Laws.Utilities 
    Numeric.AERN.Basics.Laws.Relation 
    Numeric.AERN.Basics.Laws.PartialRelation 
    Numeric.AERN.Basics.Laws.Operation 
    Numeric.AERN.Basics.Laws.RoundedOperation 
    Numeric.AERN.Basics.Laws.OperationRelation 
    Numeric.AERN.Basics.Laws.RoundedOpInPlace 
    Numeric.AERN.Misc.Bool 
    Numeric.AERN.Misc.List 
    Numeric.AERN.Misc.Maybe 
    Numeric.AERN.Misc.QuickCheck 
    Numeric.AERN.Misc.Debug
    
  Other-modules:
    Numeric.AERN.NumericOrder.PartialComparison
    Numeric.AERN.NumericOrder.Arbitrary
    Numeric.AERN.NumericOrder.Extrema
    Numeric.AERN.NumericOrder.RoundedLattice
    Numeric.AERN.NumericOrder.RefinementRoundedLattice
    Numeric.AERN.NumericOrder.InPlace.RoundedLattice
    Numeric.AERN.NumericOrder.InPlace.RefinementRoundedLattice
    Numeric.AERN.RefinementOrder.PartialComparison
    Numeric.AERN.RefinementOrder.Arbitrary
    Numeric.AERN.RefinementOrder.Extrema
    Numeric.AERN.RefinementOrder.RoundedBasis
    Numeric.AERN.RefinementOrder.RoundedLattice
    Numeric.AERN.RefinementOrder.InPlace.RoundedBasis 
    Numeric.AERN.RefinementOrder.InPlace.RoundedLattice

Executable toolAERN-bench-csv-to-gnuplot
  hs-source-dirs: tools
  ghc-options: -O2
  main-is: BenchCsvToGnuplot.hs
  build-depends:
        base >= 4 && < 5,
        directory >= 1 && < 2,
        containers >= 0.3 && < 0.5
				

  
