Name:           AERN-Real-Double
Version:        2011.1
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny (Aston University)
Copyright:      (c) 2010 Michal Konecny
Maintainer:     mikkonecny@gmail.com
Homepage:       http://code.google.com/p/aern/
Stability:      experimental
Category:       Data, Math
Synopsis:       arbitrary precision real interval arithmetic
Tested-with:    GHC ==6.12.3
Description:
    This package provides bindings and tests for using machine Double
    values as endpoints for the interval arithmetic defined in packages AERN-Basics and
    AERN-Real.

Extra-Source-Files:
    CHANGES

Library
  hs-source-dirs: src
  ghc-options:     -O2
  Build-Depends:
        base >= 4 && < 5,
        ieee-utils >= 0.4 && < 0.5,
        QuickCheck >= 2.1 && < 3,
        test-framework >= 0.2 && < 0.4, test-framework-quickcheck2 >= 0.2 && < 0.4,
        AERN-Basics == 2011.1, AERN-Real-Interval == 2011.1, AERN-Real == 2011.1
  Exposed-modules:
    Numeric.AERN.RealArithmetic.Basis.Double
    Numeric.AERN.RealArithmetic.Interval.Double

  Other-modules:
    Numeric.AERN.RealArithmetic.Basis.Double.Conversion
    Numeric.AERN.RealArithmetic.Basis.Double.NumericOrder
    Numeric.AERN.RealArithmetic.Basis.Double.FieldOps
    Numeric.AERN.RealArithmetic.Basis.Double.MixedFieldOps
    Numeric.AERN.RealArithmetic.Basis.Double.Mutable
    Numeric.AERN.RealArithmetic.Basis.Double.Measures
    Numeric.AERN.RealArithmetic.Basis.Double.ShowInternals
    Numeric.AERN.RealArithmetic.Basis.Double.SpecialConst

Executable testAERN-Real-Double
  hs-source-dirs: src, tests
  ghc-options:     -O2
  main-is: Main.hs
  Build-Depends:
        base >= 4 && < 5,
        test-framework >= 0.2 && < 0.4, test-framework-quickcheck2 >= 0.2 && < 0.4,
        AERN-Basics == 2011.1, AERN-Real-Interval == 2011.1, AERN-Real == 2011.1

Executable benchAERN-Real-Double
  hs-source-dirs: src, bench
  ghc-options:     -O2
  main-is: Main.hs
  Build-Depends:
        base >= 4 && < 5,
        criterion >= 0.5 && < 0.6,
        AERN-Basics == 2011.1, AERN-Real-Interval == 2011.1, AERN-Real == 2011.1

Executable demoAERN-Real-Double-Minimal
  hs-source-dirs: src, demos
  ghc-options: -O2
  main-is: Minimal.hs
  Build-Depends:
        base >= 4 && < 5,
        AERN-Basics == 2011.1, AERN-Real == 2011.1

    
    
