Name:           AERN-Real-MPFR
Version:        2010.1
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny (Aston University)
Copyright:      (c) 2010 Michal Konecny
Maintainer:     mikkonecny@gmail.com
Homepage:       http://code.google.com/p/aern/
Stability:      experimental
Category:       Data, Math
Synopsis:       arbitrary precision real interval arithmetic
Tested-with:    GHC ==6.12.1
Description:
    This package provides bindings and tests for using arbitrary precision floating
    point numbers provided by the library MPFR (via the Haskell library hmpfr)
    as endpoints for the interval arithmetic defined in packages AERN-Basics and
    AERN-Real.

Extra-Source-Files:
    CHANGES

Library
  hs-source-dirs: src
  ghc-options:     -O2
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.4,
        convertible >= 1.0 && < 2,
        ieee-utils >= 0.4 && < 0.5,
        QuickCheck >= 2.1 && < 2.2,
        test-framework >= 0.2 && < 0.3, test-framework-quickcheck2 >= 0.2 && < 0.3,
        hmpfr >= 0.3.1 && < 0.4,
        AERN-Basics == 2010.1, AERN-Real == 2010.1
  Exposed-modules:
    Numeric.AERN.RealArithmetic.Basis.MPFR
    Numeric.AERN.RealArithmetic.Interval.MPFR

  Other-modules:
    Numeric.AERN.RealArithmetic.Basis.MPFR.Mutable
    Numeric.AERN.RealArithmetic.Basis.MPFR.ExactOps
    Numeric.AERN.RealArithmetic.Basis.MPFR.Conversion
    Numeric.AERN.RealArithmetic.Basis.MPFR.NumericOrder
    Numeric.AERN.RealArithmetic.Basis.MPFR.FieldOps
    Numeric.AERN.RealArithmetic.Basis.MPFR.MixedFieldOps
    Numeric.AERN.RealArithmetic.Basis.MPFR.InPlace.FieldOps
    Numeric.AERN.RealArithmetic.Basis.MPFR.Measures
    Numeric.AERN.RealArithmetic.Basis.MPFR.ShowInternals

Executable testAERN-Real-MPFR
  hs-source-dirs: src, tests
  ghc-options:     -O2
  main-is: Main.hs
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.4,
        convertible >= 1.0 && < 2,
        ieee-utils >= 0.4 && < 0.5,
        QuickCheck >= 2.1 && < 2.2,
        test-framework >= 0.2 && < 0.3, test-framework-quickcheck2 >= 0.2 && < 0.3,
        hmpfr >= 0.3.1 && < 0.4,
        AERN-Basics == 2010.1, AERN-Real == 2010.1

Executable demoAERN-Real-MPFR-Minimal
  hs-source-dirs: src, demos
  ghc-options: -O2
  main-is: Minimal.hs
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.4,
        convertible >= 1.0 && < 2,
        ieee-utils >= 0.4 && < 0.5,
        QuickCheck >= 2.1 && < 2.2,
        test-framework >= 0.2 && < 0.3, test-framework-quickcheck2 >= 0.2 && < 0.3,
        hmpfr >= 0.3.1 && < 0.4,
        AERN-Basics == 2010.1, AERN-Real == 2010.1

    
    
