Name:           AERN-RmToRn-IPoly
Version:        2011.2.0.0
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny (Aston University)
Copyright:      (c) 2010 Michal Konecny
Maintainer:     mikkonecny@gmail.com
Homepage:       http://code.google.com/p/aern/
Stability:      experimental
Category:       Data, Math
Synopsis:       arbitrary precision real interval arithmetic
Tested-with:    GHC ==6.12.3
Description:
    Multi-variate polynomials with outwards-rounded point-wise arithmetic
    and common operations for continous functions, including evalution,
    composition and integration.
    Any outwards-rounded real approximations can be used as coefficients.
    (Typically the coefficients are real intervals.)

Extra-Source-Files:
    CHANGES

Library
  hs-source-dirs: src
  ghc-options:     -O2
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.4,
        QuickCheck >= 2.1 && < 3,
        test-framework >= 0.2 && < 0.4, test-framework-quickcheck2 >= 0.2 && < 0.4,
        criterion >= 0.5 && < 0.6,
        random >= 1.0 && < 2.0,
        AERN-Basics == 2011.2.0.0, 
        AERN-Real == 2011.2.0.0, 
        AERN-Real-Interval == 2011.2.0.0, 
        AERN-RmToRn == 2011.2.0.0 
  exposed-modules:       
        Numeric.AERN.RmToRn.Basis.Polynomial.IntPoly
        Numeric.AERN.RmToRn.Basis.Polynomial.IntPoly.Basics
        Numeric.AERN.RmToRn.Basis.Polynomial.IntPoly.Reduce
        Numeric.AERN.RmToRn.Basis.Polynomial.IntPoly.RingOps
        Numeric.AERN.RmToRn.Basis.Polynomial.IntPoly.Differentiate
        Numeric.AERN.RmToRn.Basis.Polynomial.IntPoly.Evaluate
        Numeric.AERN.RmToRn.Basis.Polynomial.IntPoly.Integrate
--        Numeric.AERN.RmToRn.IntPoly.RefinementOrder
--        Numeric.AERN.RmToRn.IntPoly.RingOps
  other-modules:

Executable minimal
  hs-source-dirs: src, demos
--  ghc-options:    -Wall -fno-warn-orphans -fno-warn-name-shadowing -O2
  ghc-options:  -O2
  main-is: minimal.hs
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.4,
        QuickCheck >= 2.1 && < 3,
        test-framework >= 0.2 && < 0.4, test-framework-quickcheck2 >= 0.2 && < 0.4,
        criterion >= 0.5 && < 0.6,
        random >= 1.0 && < 2.0,
        AERN-Basics == 2011.2.0.0, 
        AERN-Real == 2011.2.0.0, 
        AERN-Real-Interval == 2011.2.0.0, 
        AERN-Real-MPFR == 2011.2.0.0, 
        AERN-RmToRn == 2011.2.0.0 

Executable ivpSpringMass
  hs-source-dirs: src, demos
--  ghc-options:    -Wall -fno-warn-orphans -fno-warn-name-shadowing -O2
  ghc-options:  -O2
  main-is: ivpSpringMass.hs
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.4,
        QuickCheck >= 2.1 && < 3,
        test-framework >= 0.2 && < 0.4, test-framework-quickcheck2 >= 0.2 && < 0.4,
        criterion >= 0.5 && < 0.6,
        random >= 1.0 && < 2.0,
        AERN-Basics == 2011.2.0.0, 
        AERN-Real == 2011.2.0.0, 
        AERN-Real-Interval == 2011.2.0.0, 
        AERN-Real-MPFR == 2011.2.0.0, 
        AERN-RmToRn == 2011.2.0.0 

Executable ivpPendulum
  hs-source-dirs: src, demos
--  ghc-options:    -Wall -fno-warn-orphans -fno-warn-name-shadowing -O2
  ghc-options:  -O2
  main-is: ivpPendulum.hs
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.4,
        QuickCheck >= 2.1 && < 3,
        test-framework >= 0.2 && < 0.4, test-framework-quickcheck2 >= 0.2 && < 0.4,
        criterion >= 0.5 && < 0.6,
        random >= 1.0 && < 2.0,
        AERN-Basics == 2011.2.0.0, 
        AERN-Real == 2011.2.0.0, 
        AERN-Real-Interval == 2011.2.0.0, 
        AERN-Real-MPFR == 2011.2.0.0, 
        AERN-RmToRn == 2011.2.0.0 

Executable ivpBouncingBall
  hs-source-dirs: src, demos
--  ghc-options:    -Wall -fno-warn-orphans -fno-warn-name-shadowing -O2
  ghc-options:  -O2
  main-is: ivpBouncingBall.hs
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.4,
        QuickCheck >= 2.1 && < 3,
        test-framework >= 0.2 && < 0.4, test-framework-quickcheck2 >= 0.2 && < 0.4,
        criterion >= 0.5 && < 0.6,
        random >= 1.0 && < 2.0,
        AERN-Basics == 2011.2.0.0, 
        AERN-Real == 2011.2.0.0, 
        AERN-Real-Interval == 2011.2.0.0, 
        AERN-Real-MPFR == 2011.2.0.0, 
        AERN-RmToRn == 2011.2.0.0 

