Name:           AERN-RmToRn-Poly
Version:        2010.1
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny (Aston University)
Copyright:      (c) 2010 Michal Konecny
Maintainer:     mikkonecny@gmail.com
Homepage:       http://code.google.com/p/aern/
Stability:      experimental
Category:       Data, Math
Synopsis:       arbitrary precision real interval arithmetic
Tested-with:    GHC ==6.12.1
Description:
    Multi-variate polynomials with up/down rounded point-wise real arithmetic
    and common operations for continous functions, including evalution,
    composition and integration.
    Any up/down rounded real approximations can be used as coefficients.

Extra-Source-Files:
    CHANGES

Library
  hs-source-dirs: src
  ghc-options:     -O2
  Build-Depends:
        base >= 4 && < 5,
        QuickCheck >= 2.1 && < 2.2,
        test-framework >= 0.2 && < 0.3, test-framework-quickcheck2 >= 0.2 && < 0.3,
        criterion >= 0.5 && < 0.6,
        AERN-Basics == 2010.1, AERN-Real == 2010.1, AERN-RmToRn == 2010.1
  Exposed-modules:
    
  Other-modules:

